--- a/archs4/css/main.css
+++ b/archs4/css/main.css
@@ -646,10 +646,10 @@ text {
     font-size: 8px;
 }
 .xAxis .tick text{
-  font-family: "Arial Black", Gadget, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   fill: black;
   font-weight: normal;
-  font-size: 8px;
+  font-size: 10px;
 }
 .grid .tick line{
     stroke: grey;
